--- a/src/clariq_baseine_bm25.ipynb
+++ b/src/clariq_baseine_bm25.ipynb
@@ -17,7 +17,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stderr",
@@ -56,6 +56,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [],
+   "source": [
+    "# Files paths\n",
+    "\n",
+    "request_file_path = '../data/dev.tsv'\n",
+    "question_bank_path = '../data/question_bank.tsv'\n",
+    "run_file_path = '../sample_runs/dev_bm25'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "metadata": {
     "id": "M13NOK7Kytuv",
     "colab_type": "code",
@@ -66,10 +84,10 @@
     "outputId": "ded6d015-5413-41b0-ec24-ed91c9440a98"
    },
    "source": [
-    "# Read files and build bm25 corpus (index)\n",
+    "# Reads files and build bm25 corpus (index)\n",
     "\n",
-    "dev = pd.read_csv('../data/dev.tsv', sep='\\t')\n",
-    "question_bank = pd.read_csv('../data/question_bank.tsv', sep='\\t').fillna('')\n",
+    "dev = pd.read_csv(request_file_path, sep='\\t')\n",
+    "question_bank = pd.read_csv(question_bank_path, sep='\\t').fillna('')\n",
     "\n",
     "question_bank['tokenized_question_list'] = question_bank['question'].map(stem_tokenize)\n",
     "question_bank['tokenized_question_str'] = question_bank['tokenized_question_list'].map(lambda x: ' '.join(x))\n",
@@ -77,7 +95,7 @@
     "bm25_corpus = question_bank['tokenized_question_list'].tolist()\n",
     "bm25 = BM25Okapi(bm25_corpus)"
    ],
-   "execution_count": 28,
+   "execution_count": 25,
    "outputs": []
   },
   {
@@ -90,7 +108,7 @@
    "source": [
     "# Runs bm25 for every query and stores output in file.\n",
     "\n",
-    "with open('../sample_runs/bm25_baseline', 'w') as fo:\n",
+    "with open(run_file_path, 'w') as fo:\n",
     "  for tid in dev['topic_id'].unique():\n",
     "    query = dev.loc[dev['topic_id']==tid, 'initial_request'].tolist()[0]\n",
     "    bm25_ranked_list = bm25.get_top_n(stem_tokenize(query, True), \n",
@@ -101,7 +119,7 @@
     "    for i, qid in enumerate(preds):    \n",
     "      fo.write('{} 0 {} {} {} bm25\\n'.format(tid, qid, i, len(preds)-i))"
    ],
-   "execution_count": 29,
+   "execution_count": 26,
    "outputs": []
   },
   {
@@ -120,10 +138,10 @@
     "! python clariq_eval_tool.py    --eval_task question_relevance\\\n",
     "                                --data_dir ../data/ \\\n",
     "                                --experiment_type dev \\\n",
-    "                                --run_file ../sample_runs/bm25_baseline \\\n",
-    "                                --out_file ../sample_runs/bm25_baseline_question_relevance.eval"
+    "                                --run_file {run_file_path} \\\n",
+    "                                --out_file {run_file_path}_question_relevance.eval"
    ],
-   "execution_count": 30,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
@@ -152,10 +170,10 @@
     "! python clariq_eval_tool.py    --eval_task document_relevance\\\n",
     "                                --data_dir ../data/ \\\n",
     "                                --experiment_type dev \\\n",
-    "                                --run_file ../sample_runs/bm25_baseline \\\n",
-    "                                --out_file ../sample_runs/bm25_baseline.eval"
+    "                                --run_file {run_file_path} \\\n",
+    "                                --out_file {run_file_path}.eval"
    ],
-   "execution_count": 31,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
@@ -186,7 +204,7 @@
    "source": [
     ""
    ],
-   "execution_count": 31,
+   "execution_count": 28,
    "outputs": []
   }
  ]
